[tool.poetry]
name = "inst-bot"
version = "0.1.0"
description = ""
authors = ["Raphael <raphael.mukha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
selenium = "^4.17.2"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
